# stef_game1

./: CMakeLists.txt  CMakePresets.json
.cache/clangd/index/: main.cpp.15985804E0162FEA.idx
stef_game1/: compile_commands.json  main.cpp
